# dsp-dust

./: CMakeLists.txt  esp_idf_project_configuration.json
components/dsp-dust-lib/: CMakeLists.txt  idf_component.yml
components/dsp-dust-lib/include/: buttons.h  color.h  i2c0.h  i2c0_ina219.h  images.h  led_mat.h  pot_adc.h
components/dsp-dust-lib/src/: buttons.c  i2c0.c  mic_adc.c  pot_adc.c
main/: CMakeLists.txt  but.c  but.h  common.h  i2c0.c  i2c0.h  idf_component.yml  ina.c  ina.h  led.h  main.c  mic.c  mic.h  pot.c  pot.h
